fix: update swagger details
