# chaoscenter/authentication/api/docs/swagger.json
@@ -7,7 +7,7 @@
     "paths": {
         "/accept_invitation": {
             "post": {
-                "description": "Accept inviation to a project.",
+                "description": "Accept invitation to a project.",
                 "consumes": [
                     "application/json"
                 ],
@@ -17,7 +17,7 @@
                 "tags": [
                     "ProjectRouter"
                 ],
-                "summary": "Accept invitaion.",
+                "summary": "Accept invitation.",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -180,7 +180,7 @@
         },
         "/decline_invitation": {
             "post": {
-                "description": "Deecline invitation to a project.",
+                "description": "Decline invitation to a project.",
                 "consumes": [
                     "application/json"
                 ],
@@ -208,6 +208,40 @@
                         "description": "Unauthorized",
                         "schema": {
                             "$ref": "#/definitions/response.ErrUnauthorized"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrServerError"
+                        }
+                    }
+                }
+            }
+        },
+        "/delete_project/:project_id": {
+            "post": {
+                "description": "Delete a project.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "ProjectRouter"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrProjectNotFound"
                         }
                     },
                     "500": {
@@ -316,6 +350,50 @@
                 }
             }
         },
+        "/get_project/:project_id": {
+            "get": {
+                "description": "Return a project.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "ProjectRouter"
+                ],
+                "summary": "Get user with project.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Project ID",
+                        "name": "project_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrUnauthorized"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrServerError"
+                        }
+                    }
+                }
+            }
+        },
         "/get_project_members/:project_id/:state": {
             "get": {
                 "description": "Return list of active project members.",
@@ -329,6 +407,44 @@
                     "ProjectRouter"
                 ],
                 "summary": "Get active project members.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "State",
+                        "name": "state",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrServerError"
+                        }
+                    }
+                }
+            }
+        },
+        "/get_project_owners/:project_id/:state": {
+            "get": {
+                "description": "Return list of active project owners.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "ProjectRouter"
+                ],
+                "summary": "Get active project Owners.",
                 "parameters": [
                     {
                         "type": "string",
@@ -450,6 +566,56 @@
                         "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/response.ErrUserNotFound"
+                        }
+                    }
+                }
+            }
+        },
+        "/get_user_with_project/:username": {
+            "get": {
+                "description": "Return users who have a project.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "ProjectRouter"
+                ],
+                "summary": "Get user with project.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Username",
+                        "name": "username",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrUserNotFound"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrUnauthorized"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrServerError"
                         }
                     }
                 }
@@ -619,6 +785,12 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
+                            "$ref": "#/definitions/response.ErrUserDeactivated"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
                             "$ref": "#/definitions/response.ErrInvalidCredentials"
                         }
                     },
@@ -710,7 +882,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "obejct"
+                            "$ref": "#/definitions/response.Response"
                         }
                     },
                     "400": {
@@ -851,7 +1023,7 @@
         },
         "/status": {
             "get": {
-                "description": "Status will request users list and return, if successful, an http code 200.",
+                "description": "Status will request users list and return, if successful, a http code 200.",
                 "consumes": [
                     "application/json"
                 ],
@@ -1008,6 +1180,47 @@
                         "description": "Unauthorized",
                         "schema": {
                             "$ref": "#/definitions/response.ErrUnauthorized"
+                        }
+                    }
+                }
+            }
+        },
+        "/update_member_role": {
+            "post": {
+                "description": "Return updated member role.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "ProjectRouter"
+                ],
+                "summary": "Update member role.",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrInvalidRequest"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrUnauthorized"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrServerError"
                         }
                     }
                 }
