# chaoscenter/authentication/api/handlers/rest/misc_handlers.go
@@ -27,7 +27,7 @@ type ReadinessAPIStatus struct {
 
 // Status 		godoc
 //
-//	@Description	Status will request users list and return, if successful, an http code 200.
+//	@Description	Status will request users list and return, if successful, a http code 200.
 //	@Tags			MiscRouter
 //	@Accept			json
 //	@Produce		json
@@ -35,8 +35,7 @@ type ReadinessAPIStatus struct {
 //	@Success		200	{object}	response.Response{}
 //	@Router			/status [get]
 //
-// Status will request users list and return, if successful,
-// an http code 200
+// Status will request users list and return, if successful, a http code 200
 func Status(service services.ApplicationService) gin.HandlerFunc {
 	return func(c *gin.Context) {
 		_, err := service.GetUsers()
@@ -58,16 +57,18 @@ func Status(service services.ApplicationService) gin.HandlerFunc {
 //	@Failure		500	{object}	response.ErrServerError
 //	@Success		200	{object}	response.Response{}
 //	@Router			/readiness [get]
+//
+// Readiness will return the status of the database and collections
 func Readiness(service services.ApplicationService) gin.HandlerFunc {
 	return func(c *gin.Context) {
 		var (
-			db_flag  = "up"
-			col_flag = "up"
+			dbFlag  = "up"
+			colFlag = "up"
 		)
 
 		dbs, err := service.ListDataBase()
 		if !contains(dbs, "auth") {
-			db_flag = "down"
+			dbFlag = "down"
 		}
 
 		if err != nil {
@@ -78,15 +79,15 @@ func Readiness(service services.ApplicationService) gin.HandlerFunc {
 
 		cols, err := service.ListCollection()
 		if !contains(cols, "project") || !contains(cols, "users") {
-			col_flag = "down"
+			colFlag = "down"
 		}
 
 		if err != nil {
 			log.Error(err)
-			c.JSON(http.StatusInternalServerError, ReadinessAPIStatus{db_flag, "down"})
+			c.JSON(http.StatusInternalServerError, ReadinessAPIStatus{dbFlag, "down"})
 			return
 		}
 
-		c.JSON(http.StatusOK, ReadinessAPIStatus{db_flag, col_flag})
+		c.JSON(http.StatusOK, ReadinessAPIStatus{dbFlag, colFlag})
 	}
 }
